[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/ui/evidence/evidence_panel.gd" id="1_script"]
[ext_resource type="Theme" path="res://resources/ui/game_theme.tres" id="2_theme"]

[node name="EvidencePanel" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="DimBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.3, 0.2, 0.8)

[node name="MainPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -450.0
offset_right = 800.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeaderContainer" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "‚Üê"

[node name="TitleContainer" type="CenterContainer" parent="MainPanel/MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/HeaderContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.65, 1)
theme_override_font_sizes/font_size = 56
text = "Clues in Chapter 1"

[node name="CluesContainer" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="Clue1Container" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="ClueFrame1" type="PanelContainer" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer/Clue1Container"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer/Clue1Container/ClueFrame1"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ClueImage1" type="TextureRect" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer/Clue1Container/ClueFrame1/MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ClueLabel1" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer/Clue1Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Clue 1"
horizontal_alignment = 1

[node name="Clue2Container" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="ClueFrame2" type="PanelContainer" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer/Clue2Container"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer/Clue2Container/ClueFrame2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ClueImage2" type="TextureRect" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer/Clue2Container/ClueFrame2/MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ClueLabel2" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer/Clue2Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Clue 2"
horizontal_alignment = 1

[node name="Clue3Container" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="ClueFrame3" type="PanelContainer" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer/Clue3Container"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer/Clue3Container/ClueFrame3"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ClueImage3" type="TextureRect" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer/Clue3Container/ClueFrame3/MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ClueLabel3" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/CluesContainer/Clue3Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Clue 3"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Next"

[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/HeaderContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
